--- a/style.css
+++ b/style.css
@@ -130,3 +130,93 @@ main h2 span::after {
   }
 }
 /* end main */
+section{
+  font-family: "Poppins", sans-serif;
+  padding: 5rem 0;
+}
+section:nth-child(2n){
+  background-color: #f8f8f8;
+}
+
+section .title{
+  margin-bottom: 3rem;
+}
+section .title h4{
+  font-size: 1.35rem;
+  color: #ed4848;
+  position: relative;
+}
+section .title h2{
+  font-size: 3.5rem;
+}
+section .title p{
+  font-size: 1.15rem;
+}
+section .about-self::after{
+  content: "";
+  clear: both;
+  display: block;
+}
+section .about-self .left{
+  width: 50%;
+  float: left;
+}
+section .about-self .left img{
+  max-width: 100%;
+}
+section .about-self .right{
+  width: 50%;
+  float: left;
+  padding: 0 2rem;
+}
+section .about-self .right h3{
+  font-size: 2.25rem;
+  margin-bottom: 1rem;
+}
+section .about-self .right h3 strong{
+  color: #ed4848;
+}
+section .about-self .right p{
+  font-size: 1.15rem;
+  margin: 1rem 0;
+}
+section .about-self .right .social a{
+  font-size: 2.5rem;
+  margin-right: 0.2rem;
+}
+/* end section #about */
+section .do-me::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+section .do-me .do-inner{
+  background-color: #fff;
+  width: 30%;
+  padding: 2rem;
+  float: left;
+  margin-right: 5%;
+  cursor: pointer;
+}
+section .do-me .do-inner:last-child{
+  margin-right: 0;
+}
+section .do-me .do-inner .icon i{
+  font-size: 2.5rem;
+  color: #ff6a6a;
+}
+section .do-me .do-inner .container h3{
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+section .do-me .do-inner .container p{
+  font-size: 1.15rem;
+}
+section .do-me .do-inner:hover{
+  background-color: lightcoral;
+  color: white;
+}
+section .do-me .do-inner:hover i{
+  color: white;
+}
+/* end section #features */
